-------------------------------------------------
Bug fixes:
	- Language Define Errors
	- If the search result filters were changed, an error occurred if a text field with select was used for the search.

Improvements:
	- Added an option in preferences to set the value that indicates a field is empty (works for: Select, multiselect, radio and checkbox). Previously the value was in the code (N/A).

Security:
	- /

Correction de bogues:
	- Erreurs define de langue
	- Si on changeait les filtres des résultats de la recherche, il y avait une erreur si un champs de type texte avec select pour la recherche était utilisé

Améliorations:
	- Ajout d'une option dans les préférences pour définir la valeur qui indique qu\'un champ est vide (fonctionne pour: Select, multiselect, radio et checkbox). Avant la valeur était dans le code (N/A).

Sécurités:
	- /
-------------------------------------------------
Version: 1.5.3 Stable
Date:    03.01.2025
-------------------------------------------------
Bug fixes:
	- /

Improvements:
	- The drop-down menu in the search on an additional field of type "text" is now compatible with multiple selection
	- Additional fields that have the value "N/A" are not displayed on the item sheet.

Security:
	- /

Correction de bogues:
	- /

Améliorations:
	- Le menu déroulant dans la recherche sur un champs supplémentaire de type "texte" est maintenant compatible en sélection multiple
	- Les champs supplémentaires qui ont la valeur "N/A" ne sont pas affichés sur la fiche article

Sécurités:
	- /
-------------------------------------------------
Version: 1.5.2 Stable
Date:    09.12.2024
-------------------------------------------------
Bug fixes:
	- /

Improvements:
	- /

Security:
	- Malicious code could be injected from a cookie (mcdruid)

Correction de bogues:
	- /

Améliorations:
	- /

Sécurités:
	- Il était possible d'injecter un code malveillant depuis un cookie (mcdruid)

-------------------------------------------------
Version: 1.5.0 Stable